--- a/laboratorio/templates/inicio2.html
+++ b/laboratorio/templates/inicio2.html
@@ -20,6 +20,55 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
     <title>Almacen Laboratorio</title>
+    <style type="text/css">
+        body {
+            background-color: #E2F0CB;
+        }
+
+        button,
+        .btn {
+            background-color: #C7CEEA;
+            border-style: solid;
+            border-radius: 20px;
+            border-color: #a764e2;
+            color: rgb(0, 0, 0);
+            padding: 1rem 2rem;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 2rem;
+            width: 70%;
+            height: 5rem;
+            margin-left: 15%;
+            margin-bottom: 1rem;
+            display: block;
+        }
+
+        nav {
+            background-color: #d3b9e9;
+            color: #FF9AA2;
+            border-radius: 25px;
+            text-align: center;
+            font-size: 3.5rem;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            ;
+            text-shadow: #a764e2;
+            width: 100%;
+            height: 5rem;
+            margin-left: 0;
+            display: block;
+            position: fixed;
+            top: 0;
+
+        }
+
+        section {
+            margin-top: 15rem;
+            margin-left: 0;
+            display: block;
+            position: relative;
+        }
+    </style>
 </head>
 
 <body>
