--- a/laboratorio/templates/listaProductos.html
+++ b/laboratorio/templates/listaProductos.html
@@ -8,13 +8,13 @@
     <title>Lista Productos</title>
 </head>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Almacen LAboratorio</title>
+    <title>Almacen Laboratorio</title>
 </head>
 <body>
     <div class="container">
