--- a/laboratorio/templates/inicio.html
+++ b/laboratorio/templates/inicio.html
@@ -79,7 +79,7 @@
     </header>
     <section>
         <button class="btn btn-primary" type="button" href="./inicio">Inicio</button><br>
-        <button class="btn btn-primary" type="button" href="./productos">Productos</button><br>
+        <button class="btn btn-primary" type="button"><a href="{% url 'producto.html' %}">Productos</a></button><br>
         <button class="btn btn-primary" type="button" href="./usuarios">Usuarios</button><br>
         <button class="btn btn-primary" type="button" href="./proveedores">Proveedores</button><br>
         <button class="btn btn-primary" type="button" href="./clientes">Clientes</a></button><br>
