--- a/laboratorio/templates/inicio.html
+++ b/laboratorio/templates/inicio.html
@@ -78,11 +78,11 @@
         </nav>
     </header>
     <section>
-        <button class="btn btn-primary" type="button" href="./inicio">Inicio</button><br>
-        <button class="btn btn-primary" type="button"><a href="{% url 'producto.html' %}">Productos</a></button><br>
-        <button class="btn btn-primary" type="button" href="./usuarios">Usuarios</button><br>
-        <button class="btn btn-primary" type="button" href="./proveedores">Proveedores</button><br>
-        <button class="btn btn-primary" type="button" href="./clientes">Clientes</a></button><br>
+        <button class="btn btn-primary" type="button"> <a href="{% url 'inicio.html' %}">Inicio</a></button><br>
+        <button class="btn btn-primary" type="button"> <a href="{% url 'producto.html' %}">Productos</a></button><br>
+        <button class="btn btn-primary" type="button"> <a href="">Usuarios</a></button><br>
+        <button class="btn btn-primary" type="button"> <a href="">Proveedores</a></button><br>
+        <button class="btn btn-primary" type="button"> <a href="">Clientes</a></button><br>
     </section>
 </body>
 
