--- a/laboratorio/templates/producto.html
+++ b/laboratorio/templates/producto.html
@@ -27,11 +27,11 @@
             <h1>Productos</h1>
         </header>
         <nav>
-            <a href="inicio.html" class="btn btn-primary">INICIO</a>
-            <a href="altaProducto.html" class="btn btn-primary">ALTA</a>
-            <a href="cambioProducto.html" class="btn btn-primary">MODIFICACIÓN</a>
-            <a href="bajaProducto.html" class="btn btn-primary">BAJA</a>
-            <a href="listaProducto.html" class="btn btn-primary">LISTA</a>
+            <a href="{% url 'inicio.html' %}" class="btn btn-primary">INICIO</a>
+            <a href="" class="btn btn-primary">ALTA</a>
+            <a href="" class="btn btn-primary">MODIFICACIÓN</a>
+            <a href="" class="btn btn-primary">BAJA</a>
+            <a href="" class="btn btn-primary">LISTA</a>
         </nav>
     </div>
 </body>
