--- a/laboratorio/templates/proveedor.html
+++ b/laboratorio/templates/proveedor.html
@@ -13,11 +13,11 @@
             <h1>Proveedor</h1>
         </header>
         <nav>
-            <a href="inicio.html" class="btn btn-primary">INICIO</a>
-            <a href="altaProveedor.html" class="btn btn-primary">ALTA</a>
-            <a href="cambioProveedor.html" class="btn btn-primary">MODIFICACIÓN</a>
-            <a href="bajaProveedor.html" class="btn btn-primary">BAJA</a>
-            <a href="listaProveedor.html" class="btn btn-primary">LISTA</a>
+            <a href="" class="btn btn-primary">INICIO</a>
+            <a href="" class="btn btn-primary">ALTA</a>
+            <a href="" class="btn btn-primary">MODIFICACIÓN</a>
+            <a href="" class="btn btn-primary">BAJA</a>
+            <a href="" class="btn btn-primary">LISTA</a>
         </nav>
     </div>
 </body>
