--- a/laboratorio/templates/usuario.html
+++ b/laboratorio/templates/usuario.html
@@ -13,11 +13,11 @@
             <h1>Usuarios</h1>
         </header>
         <nav>
-            <a href="inicio.html" class="btn btn-primary">INICIO</a>
-            <a href="altaUsuario.html" class="btn btn-primary">ALTA</a>
-            <a href="cambioUsuario.html" class="btn btn-primary">MODIFICACIÓN</a>
-            <a href="bajaUsuario.html" class="btn btn-primary">BAJA</a>
-            <a href="listaUsuario.html" class="btn btn-primary">LISTA</a>
+            <a href="" class="btn btn-primary">INICIO</a>
+            <a href="" class="btn btn-primary">ALTA</a>
+            <a href="" class="btn btn-primary">MODIFICACIÓN</a>
+            <a href="" class="btn btn-primary">BAJA</a>
+            <a href="" class="btn btn-primary">LISTA</a>
         </nav>
     </div>
 </body>
