--- a/laboratorio/templates/producto.html
+++ b/laboratorio/templates/producto.html
@@ -28,10 +28,10 @@
         </header>
         <nav>
             <a href="{% url 'inicio.html' %}" class="btn btn-primary">INICIO</a>
-            <a href="" class="btn btn-primary">ALTA</a>
-            <a href="" class="btn btn-primary">MODIFICACIÓN</a>
-            <a href="" class="btn btn-primary">BAJA</a>
-            <a href="" class="btn btn-primary">LISTA</a>
+            <a href="{% url 'altaProducto.html' %}" class="btn btn-primary">ALTA</a>
+            <a href="{% url 'cambioProducto.html' %}" class="btn btn-primary">MODIFICACIÓN</a>
+            <a href="{% url 'bajaProducto.html' %}" class="btn btn-primary">BAJA</a>
+            <a href="{% url 'listaProducto.html' %}" class="btn btn-primary">LISTA</a>
         </nav>
     </div>
 </body>
