--- a/laboratorio/templates/altaUsuario.html
+++ b/laboratorio/templates/altaUsuario.html
@@ -41,6 +41,9 @@
                     aria-describedby="passUsuario">
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
+            <br>
+            <br>
+            <a href="{% url 'inicio.html' %}" class="btn btn-primary">INICIO</a>
         </form>
     </div>
 </body>
