--- a/laboratorio/templates/bajaProducto.html
+++ b/laboratorio/templates/bajaProducto.html
@@ -36,6 +36,9 @@
                     aria-describedby="stockProducto">
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
+            <br>
+            <br>
+            <a href="{% url 'inicio.html' %}" class="btn btn-primary">INICIO</a>
         </form>
     </div>
 </body>
