--- a/laboratorio/templates/cambioProducto.html
+++ b/laboratorio/templates/cambioProducto.html
@@ -56,6 +56,9 @@
                 <input type="text" class="form-control" id="idMarca" name="idMarca" aria-describedby="idMarca">
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
+            <br>
+            <br>
+            <a href="{% url 'inicio.html' %}" class="btn btn-primary">INICIO</a>
         </form>
     </div>
 </body>
