--- a/laboratorio/templates/cambioProveedor.html
+++ b/laboratorio/templates/cambioProveedor.html
@@ -48,6 +48,9 @@
                     aria-describedby="correoProveedor">
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
+            <br>
+            <br>
+            <a href="{% url 'inicio.html' %}" class="btn btn-primary">INICIO</a>
         </form>
     </div>
 </body>
