--- a/laboratorio/templates/cliente.html
+++ b/laboratorio/templates/cliente.html
@@ -13,11 +13,11 @@
             <h1>Clientes</h1>
         </header>
         <nav>
-            <a href="" class="btn btn-primary">INICIO</a>
-            <a href="" class="btn btn-primary">ALTA</a>
-            <a href="" class="btn btn-primary">MODIFICACIÓN</a>
-            <a href="" class="btn btn-primary">BAJA</a>
-            <a href="" class="btn btn-primary">LISTA</a>
+            <a href="{% url 'inicio.html' %}" class="btn btn-primary">INICIO</a>
+            <a href="{% url 'altaCliente.html' %}" class="btn btn-primary">ALTA</a>
+            <a href="{% url 'cambioCliente.html' %}" class="btn btn-primary">MODIFICACIÓN</a>
+            <a href="{% url 'bajaCliente.html' %}" class="btn btn-primary">BAJA</a>
+            <a href="{% url 'listaCliente.html' %}" class="btn btn-primary">LISTA</a>
         </nav>
     </div>
 </body>
