--- a/laboratorio/templates/inicio.html
+++ b/laboratorio/templates/inicio.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Lista Productos</title>
-</head>
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -80,9 +69,9 @@
     <section>
         <button class="btn btn-primary" type="button"> <a href="{% url 'inicio.html' %}">Inicio</a></button><br>
         <button class="btn btn-primary" type="button"> <a href="{% url 'producto.html' %}">Productos</a></button><br>
-        <button class="btn btn-primary" type="button"> <a href="">Usuarios</a></button><br>
-        <button class="btn btn-primary" type="button"> <a href="">Proveedores</a></button><br>
-        <button class="btn btn-primary" type="button"> <a href="">Clientes</a></button><br>
+        <button class="btn btn-primary" type="button"> <a href="{% url 'proveedor.html' %}">Proveedores</a></button><br>
+        <button class="btn btn-primary" type="button"> <a href="{% url 'cliente.html' %}">Clientes</a></button><br>
+        <button class="btn btn-primary" type="button"> <a href="{% url 'usuario.html' %}">Usuarios</a></button><br>
     </section>
 </body>
 
