--- a/laboratorio/templates/html/altaProveedor.html
+++ b/laboratorio/templates/html/altaProveedor.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Lista Proveedor</title>
+    <title>Alta Proveedor</title>
 </head>
 <!DOCTYPE html>
 <html lang="es">
@@ -18,13 +18,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Lista Proveedor</title>
+    <title>Alta Proveedor</title>
 </head>
 
 <body>
     <div class="container">
         <header>
-            <h1>Lista Proveedor</h1>
+            <h1>Alta Proveedor</h1>
         </header>
         <form action="post">
             <div class="mb-3">
@@ -50,9 +50,16 @@
             <button type="submit" class="btn btn-primary">Enviar</button>
             <br>
             <br>
-            <a href="{% url 'inicio.html' %}" class="btn btn-primary">INICIO</a>
+            <a href="{% url 'inicio' %}" class="btn btn-primary">INICIO</a>
         </form>
     </div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
