--- a/laboratorio/templates/html/producto.html
+++ b/laboratorio/templates/html/producto.html
@@ -27,13 +27,20 @@
             <h1>Productos</h1>
         </header>
         <nav>
-            <a href="{% url 'inicio.html' %}" class="btn btn-primary">INICIO</a>
-            <a href="{% url 'altaProducto.html' %}" class="btn btn-primary">ALTA</a>
-            <a href="{% url 'cambioProducto.html' %}" class="btn btn-primary">MODIFICACIÓN</a>
-            <a href="{% url 'bajaProducto.html' %}" class="btn btn-primary">BAJA</a>
-            <a href="{% url 'listaProducto.html' %}" class="btn btn-primary">LISTA</a>
+            <a href="{% url 'inicio' %}" class="btn btn-primary">INICIO</a>
+            <a href="{% url 'altaProducto' %}" class="btn btn-primary">ALTA</a>
+            <a href="{% url 'cambioProducto' %}" class="btn btn-primary">MODIFICACIÓN</a>
+            <a href="{% url 'bajaProducto' %}" class="btn btn-primary">BAJA</a>
+            <a href="{% url 'listaProducto' %}" class="btn btn-primary">LISTA</a>
         </nav>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+
 
 </html>
