--- a/laboratorio/templates/inicio.html
+++ b/laboratorio/templates/inicio.html
@@ -1,78 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block titulo %}Inicio{% endblock %}
+{% block contenido %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
-    <title>Almacen Laboratorio</title>
-    <style type="text/css">
-        body {
-            background-color: #E2F0CB;
-        }
-
-        button,
-        .btn {
-            background-color: #C7CEEA;
-            border-style: solid;
-            border-radius: 20px;
-            border-color: #a764e2;
-            color: rgb(0, 0, 0);
-            padding: 1rem 2rem;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 2rem;
-            width: 70%;
-            height: 5rem;
-            margin-left: 15%;
-            margin-bottom: 1rem;
-            display: block;
-        }
-
-        nav {
-            background-color: #d3b9e9;
-            color: #FF9AA2;
-            border-radius: 25px;
-            text-align: center;
-            font-size: 3.5rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-            ;
-            text-shadow: #a764e2;
-            width: 100%;
-            height: 5rem;
-            margin-left: 0;
-            display: block;
-            position: fixed;
-            top: 0;
-
-        }
-
-        section {
-            margin-top: 15rem;
-            margin-left: 0;
-            display: block;
-            position: relative;
-        }
-    </style>
-</head>
-
-<body>
-    <header>
-        <nav>
-            <a>Almacén Laboratorio</a>
-        </nav>
-    </header>
-    <section>
-        <button class="btn btn-primary" type="button"> <a href="{% url 'inicio.html' %}">Inicio</a></button><br>
-        <button class="btn btn-primary" type="button"> <a href="{% url 'producto.html' %}">Productos</a></button><br>
-        <button class="btn btn-primary" type="button"> <a href="{% url 'proveedor.html' %}">Proveedores</a></button><br>
-        <button class="btn btn-primary" type="button"> <a href="{% url 'cliente.html' %}">Clientes</a></button><br>
-        <button class="btn btn-primary" type="button"> <a href="{% url 'usuario.html' %}">Usuarios</a></button><br>
-    </section>
-</body>
-
-</html>
+<div class="p-5 mb-4 bg-light rounded-3">
+    <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Almacen Laboratorio</h1>
+        <p class="col-md-8 fs-4">Accede a las diferentes seciones con los botones de la cabecera
+            o los que hay a continuación.</p>
+        <section>
+            <button class="btn btn-outline-primary" type="button"> <a href="{% url 'inicio' %}">Inicio</a></button>
+            <button class="btn btn-outline-primary" type="button"> <a
+                    href="{% url 'listaProducto' %}">Productos</a></button>
+            <button class="btn btn-outline-primary" type="button"> <a
+                    href="{% url 'listaProveedor' %}">Proveedores</a></button>
+            <button class="btn btn-outline-primary" type="button"> <a
+                    href="{% url 'listaCliente' %}">Clientes</a></button>
+            <button class="btn btn-outline-primary" type="button"> <a
+                    href="{% url 'listaUsuario' %}">Usuarios</a></button>
+        </section>
+    </div>
+</div>
+{% endblock %}
