Configuración BD y listas

--- a/laboratorio/templates/base.html
+++ b/laboratorio/templates/base.html
@@ -16,7 +16,13 @@
     .align-right {
       float: right;
     }
-    
+    .boton_peq{
+      width: 100px;
+      font-size: small;
+    }
+
+    .align-center {
+      text-align: center;}
   </style>
 </head>
 
