--- a/laboratorio/templates/html/cliente/listaCliente.html
+++ b/laboratorio/templates/html/cliente/listaCliente.html
@@ -18,26 +18,23 @@
                     </tr>
                 </thead>
                 <tbody>
+                    {% for cliente in clientes %}
                     <tr class="">
-                        <td style="font-size: large;">Ref-Ciente>
-                        <td style="font-size: large;">Nombre</td>
-                        <td style="font-size: large;">Cliente</td>
+                        <td style="font-size: large;">{{ cliente.id }}</td>
+                        <td style="font-size: large;">{{cliente.nombre}}</td>
+                        <td style="font-size: large;">{{cliente.email}}</td>
+                        <td>
+                            <button name="eliminar" id="eliminar" class="btn btn-outline-danger align-right"
+                                type="button" value="Eliminar"><a>Eliminar</a></button>
+                            <button name="editar" id="editar" class="btn btn-outline-primary align-right" type="button"
+                                value="Editar"><a href="{% url 'editarCliente' %}">Editar</a></button>
+                        </td>
                     </tr>
-                    <tr class="">
-                        <td style="font-size: large;">Ref-cliente>
-                        <td style="font-size: large;">Nombre</td>
-                        <td style="font-size: large;">Cliente</td>
-
-                    </tr>
+                    {% endfor %}
                 </tbody>
             </table>
             <button name="alta" id="alta" class="btn btn-outline-success" type="button"> <a
                     href="{% url 'crearCliente' %}">Alta Cliente</a></button>
-            <button name="editar" id="editar" class="btn btn-outline-primary" type="button" value="Editar"><a
-                    href="{% url 'editarCliente' %}">Editar Cliente</a></button>
-            <button name="eliminar" id="eliminar" class="btn btn-outline-danger align-right" type="button"
-                value="Eliminar"><a>Eliminar Cliente</a></button>
-        </div>
     </div>
     <div class="card-footer text-muted">
         Creditos: <a href="https://www.linkedin.com/in/lázaro-belloch-canet/">LBC</a>
