Finalizado crud. Empezar movimientos stock

--- a/laboratorio/templates/base.html
+++ b/laboratorio/templates/base.html
@@ -14,15 +14,27 @@
   <title>{% block titulo %} {% endblock %}</title>
   <style>
     .align-right {
+      /* Bontenes alineados en horizontal y a la derecha del td*/
+      text-align: right;
       float: right;
     }
-    .boton_peq{
-      width: 100px;
-      font-size: small;
+
+    .boton_peq {
+      width: auto;
+      font-size: .6rem;
     }
 
     .align-center {
-      text-align: center;}
+      text-align: center;
+    }
+
+    .text-lista-cli {
+      font-size: 1.2rem;
+    }
+
+    .text-lista-prod {
+      font-size: 1rem;
+    }
   </style>
 </head>
 
