--- a/laboratorio/templates/html/cliente/editarCliente.html
+++ b/laboratorio/templates/html/cliente/editarCliente.html
@@ -12,7 +12,7 @@
         {% include 'html/cliente/formCliente.html' %}
     </div>
     <div class="card-footer text-muted">
-        <a class="nav-item nav-link" href="{% url 'listaCliente' %}">Lista Clientes</a>
+        <a class="nav-item nav-link" href="{% url 'listaCliente' }">Lista Clientes</a>
     </div>
 </div>
 
