--- a/laboratorio/templates/html/proveedor/editarProveedor.html
+++ b/laboratorio/templates/html/proveedor/editarProveedor.html
@@ -12,7 +12,7 @@
         {% include 'html/proveedor/formProveedor.html' %}
     </div>
     <div class="card-footer text-muted">
-        <a class="nav-item nav-link" href="{% url 'listaProveedor' %}">Lista Proveedor</a>
+        <a class="nav-item nav-link" href="{% url 'listaProveedor'}">Lista Proveedor</a>
     </div>
 </div>
 
