--- a/laboratorio/templates/html/usuario/editarUsuario.html
+++ b/laboratorio/templates/html/usuario/editarUsuario.html
@@ -12,7 +12,7 @@
         {% include 'html/usuario/formUsuario.html' %}
     </div>
     <div class="card-footer text-muted">
-        <a class="nav-item nav-link" href="{% url 'listaUsuario' %}">Lista Usuarios</a>
+        <a class="nav-item nav-link" href="{% url 'listaUsuario' }">Lista Usuarios</a>
     </div>
 </div>
 
