--- a/laboratorio/templates/html/cliente/listaCliente.html
+++ b/laboratorio/templates/html/cliente/listaCliente.html
@@ -6,28 +6,28 @@
     <div class="card-header">
         Clientes
     </div>
-    <div class="card-body">
+    <div class="card-body ">
         <h4 class="card-title">Lista de Clientes</h4>
-        <div class="table-responsive">
-            <table class="table table-primary">
+        <div class="table-responsive text-lista-cli">
+            <table class="table table-primary ">
                 <thead>
                     <tr>
-                        <th scope="col" style="font-size: x-large;">Ref-Cliente</th>
-                        <th scope="col" style="font-size: x-large;">Nombre</th>
-                        <th scope="col" style="font-size: x-large;">Cliente</th>
+                        <th scope="col" >Ref-Cliente</th>
+                        <th scope="col" >Nombre</th>
+                        <th scope="col" >Cliente</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for cliente in clientes %}
                     <tr class="">
-                        <td style="font-size: large;">{{ cliente.id }}</td>
-                        <td style="font-size: large;">{{cliente.nombre}}</td>
-                        <td style="font-size: large;">{{cliente.email}}</td>
+                        <td>{{ cliente.id }}</td>
+                        <td>{{cliente.nombre}}</td>
+                        <td>{{cliente.email}}</td>
                         <td>
-                            <button name="eliminar" id="eliminar" class="btn btn-outline-danger align-right"
-                                type="button" value="Eliminar"><a>Eliminar</a></button>
-                            <button name="editar" id="editar" class="btn btn-outline-primary align-right" type="button"
-                                value="Editar"><a href="{% url 'editarCliente' %}">Editar</a></button>
+                            <a name="eliminar" id="eliminar" class="btn btn-outline-danger boton_peq align-right"
+                                type="button" value="Eliminar" href="{% url 'eliminarCliente' cliente.id %}">Eliminar</a>
+                            <a name="editar" id="editar" class="btn btn-outline-primary boton_peq align-right " type="button"
+                                value="Editar" href="{% url 'editarCliente'  cliente.id%}">Editar</a>
                         </td>
                     </tr>
                     {% endfor %}
