--- a/laboratorio/templates/inicio.html
+++ b/laboratorio/templates/inicio.html
@@ -5,10 +5,11 @@
 <div class="p-5 mb-4 bg-light rounded-3">
     <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Almacen Laboratorio</h1>
-        <p class="col-md-8 fs-4">Accede a las diferentes seciones con los botones de la cabecera
+        <p class="col-md-8 fs-4">Accede a las diferentes secciones con los botones de la cabecera
             o los que hay a continuación.</p>
         <section>
-            <button class="btn btn-outline-primary" type="button"> <a href="{% url 'inicio' %}">Inicio</a></button>
+            <button class="btn btn-outline-primary" type="button"> <a 
+                    href="{% url 'inicio' %}">Inicio</a></button>
             <button class="btn btn-outline-primary" type="button"> <a
                     href="{% url 'listaProducto' %}">Productos</a></button>
             <button class="btn btn-outline-primary" type="button"> <a
