--- a/laboratorio/templates/html/producto/listaProducto.html
+++ b/laboratorio/templates/html/producto/listaProducto.html
@@ -14,8 +14,8 @@
                     <tr>
                         <th scope="col">Ref-Fab</th>
                         <th scope="col">Nombre</th>
-                        <th scope="col">Producto</th>
-                        <th scope="col">Característica</th>
+                        <th scope="col">Característica 1</th>
+                        <th scope="col">Característica 2</th>
                         <th scope="col">Familia</th>
                         <th scope="col">Tipo</th>
                         <th scope="col">Marca</th>
@@ -32,7 +32,7 @@
                         <td>{{producto.id}}</td>
                         <td>{{producto.nombre}}</td>
                         <td>{{producto.caracteristica1}}</td>
-                        <td>{{producto.caracteristica1}}</td>
+                        <td>{{producto.caracteristica2}}</td>
                         <td>{{producto.familia}}</td>
                         <td>{{producto.tipo}}</td>
                         <td>{{producto.marca}}</td>
