--- a/laboratorio/templates/html/proveedor/listaProveedor.html
+++ b/laboratorio/templates/html/proveedor/listaProveedor.html
@@ -14,7 +14,7 @@
                     <tr>
                         <th scope="col">Ref-Proveedor</th>
                         <th scope="col">Nombre</th>
-                        <th scope="col">Proveedor</th>
+                        <th scope="col">eMail</th>
 
                     </tr>
                 </thead>
