--- a/laboratorio/templates/html/producto/formProducto.html
+++ b/laboratorio/templates/html/producto/formProducto.html
@@ -4,12 +4,13 @@
     <div class="mb-3">
         <label for="" class="form-label">{{campo.label}}</label>
         <input type="{{ campo.field.widget.input_type }}" 
-               class="form-control"
-               name="{{ campo.name }}" 
-               id="{{ campo.id_for_label }}" 
-               aria-describedby="helpId" 
-               placeholder="{{ campo.label }}"
-               >
+            class="form-control"
+            name="{{ campo.name }}" 
+            id="{{ campo.id_for_label }}" 
+            aria-describedby="helpId" 
+            placeholder="{{ campo.label }}"
+            value="{{ campo.value | default_if_none:'' }}"
+            >
     </div>
     {% endfor %}
     <div class="col-12 help-text">
