--- a/laboratorio/templates/base.html
+++ b/laboratorio/templates/base.html
@@ -35,6 +35,11 @@
     .text-lista-prod {
       font-size: 1rem;
     }
+
+    .errores {
+      color: red;
+      font-size: small;
+    }
   </style>
 </head>
 
